infrasturcture.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: EC2 instance for CodeDeploy via CodePipeline

Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: Select the VPC to deploy into

  SubnetId:
    Type: AWS::EC2::Subnet::Id
    Description: Select the Subnet to deploy into

Resources:

  EC2Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforAWSCodeDeploy
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore

  InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref EC2Role

  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP and SSH access
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  WebInstance:
    Type: AWS::EC2::Instance
    DependsOn: InstanceProfile
    Properties:
      ImageId: ami-098e39bafa7e7303d
      InstanceType: t2.micro
      IamInstanceProfile: !Ref InstanceProfile
      SubnetId: !Ref SubnetId
      SecurityGroupIds:
        - !Ref WebSecurityGroup
      Tags:
        - Key: Name
          Value: CodeDeployServer
      UserData:
        Fn::Base64: |
          #!/bin/bash
          yum update -y

          # Install Apache
          yum install -y httpd
          systemctl start httpd
          systemctl enable httpd

          # Install dependencies
          yum install -y ruby wget

          # Install CodeDeploy Agent
          cd /home/ec2-user
          wget https://aws-codedeploy-us-east-1.s3.us-east-1.amazonaws.com/latest/install
          chmod +x ./install
          ./install auto

          systemctl start codedeploy-agent
          systemctl enable codedeploy-agent
